--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'unsafe-inline'; connect-src *; media-src * vscode-resource: blob:">
 	<base>
 	<script>
+		const host = '127.0.0.1:16363'
 		const audio = new Audio()
 		const Lyric = lrcs => {
 			const parsed = {}
@@ -30,11 +31,11 @@
 
 		/*
 		// websocket
-		const webSocket = new WebSocket('ws://localhost:16363')
+		const webSocket = new WebSocket(`ws://${host}`)
 		const postMessage = (type, body) => webSocket.send(JSON.stringify({ type, body }))
 
 		// http
-		const postMessage = (type, body) => fetch('http://localhost:16363/receiver', { method: 'POST', body: JSON.stringify({ type, body }) })
+		const postMessage = (type, body) => fetch(`http://${host}/receiver`, { method: 'POST', body: JSON.stringify({ type, body }) })
 		*/
 
 		// webview api
@@ -110,7 +111,7 @@
 				case 'load': {
 					song = data.song
 					lyric = Lyric(data.lyric)
-					audio.src = `http://127.0.0.1:16363/${song.source.type === 'djradio' ? 'program' : 'song'}/${song.id}`
+					audio.src = `http://${host}/${song.source.type === 'djradio' ? 'program' : 'song'}/${song.id}`
 					if (data.action) audio.play()
 					return
 				}
@@ -159,12 +160,12 @@
 		webSocket.onmessage = event => receiveMessage(event.data)
 
 		// long polling
-		const connect = () => fetch('http://localhost:16363').then(response => response.status === 204 ? connect() : response.json()).catch(() => connect())
+		const connect = () => fetch(`http://${host}`).then(response => response.status === 204 ? connect() : response.json()).catch(() => connect())
 		const polling = () => connect().then(message => (receiveMessage(message), polling()))
 		polling()
 
 		// sse
-		const eventSource = new EventSource('http://localhost:16363/sender')
+		const eventSource = new EventSource(`http://${host}/sender`)
 		eventSource.onmessage = event => receiveMessage(event.data)
 		*/
 
